--- a/WafferlyBackEnd/WafferlyBackEnd.csproj
+++ b/WafferlyBackEnd/WafferlyBackEnd.csproj
@@ -6,10 +6,21 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameWorkCore.SqlServer" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+    <Folder Include="Models\Domain\" />
+    <Folder Include="Models\Repositories\" />
+    <Folder Include="Views\New Folder\" />
+    <Folder Include="Views\Dashboard\Items\" />
+    <Folder Include="Controllers\Dashboard\" />
+    <Folder Include="Views\Dashboard\Vendors\" />
+  </ItemGroup>
 </Project>
